--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -30,9 +30,9 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: This post is licensed under :LICENSE_NAME by the author.
-    name: CC BY 4.0
-    link: https://creativecommons.org/licenses/by/4.0/
+    template: Thanks for reading! Feel free to share this post with others.
+    name: 
+    link:
 
   # Displayed in the footer
   brief: Some rights reserved.
